--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://sunny7657.github.io/goit-react-hw-06-phonebook/",
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
+    "@reduxjs/toolkit": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -13,7 +14,6 @@
     "react-dom": "^18.1.0",
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
-    "redux": "^5.0.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.3"
   },
