--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "homepage": "https://sunny7657.github.io/goit-react-hw-06-phonebook/",
   "dependencies": {
-    "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "nanoid": "^5.0.5",
     "notiflix": "^3.2.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
